# crew-ai-agent

./: README.md  app.py  requirements.txt
company/: .gitignore  README.md  pyproject.toml
company/src/company/: crew.py  main.py
