[project]
name = "company"
version = "0.1.0"
description = "company using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
company = "company.main:run"
run_crew = "company.main:run"
train = "company.main:train"
replay = "company.main:replay"
test = "company.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
